enable wq power efficient default

--- a/arch/arm64/configs/RMX1921_defconfig
+++ b/arch/arm64/configs/RMX1921_defconfig
@@ -841,3 +841,8 @@ CONFIG_USB_F_HID=y
 #I/O Schedulers
 #
 CONFIG_IOSCHED_TRIPNDROID=y
+
+#
+# WQ Power Saving
+#
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
