Introducing 'Silver-Core' kernel

--- a/arch/arm64/configs/RMX1921_defconfig
+++ b/arch/arm64/configs/RMX1921_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-BloodMoon_Kernel"
+CONFIG_LOCALVERSION="-Silver-Core"
 # CONFIG_LOCALVERSION_AUTO is not set
 VENDOR_EDIT=y
 # CONFIG_FHANDLE is not set
