--- a/arch/arm64/configs/RMX1921_defconfig
+++ b/arch/arm64/configs/RMX1921_defconfig
@@ -836,3 +836,7 @@ CONFIG_AINUR_DTS_SW=y
 CONFIG_PSI=y
 # CONFIG_PSI_DEFAULT_DISABLED is not set
 CONFIG_USB_F_HID=y
+
+#I/O Schedulers
+#
+CONFIG_IOSCHED_TRIPNDROID=y
