--- a/arch/arm64/configs/RMX1921_defconfig
+++ b/arch/arm64/configs/RMX1921_defconfig
@@ -27,6 +27,7 @@ CONFIG_RT_GROUP_SCHED=y
 CONFIG_CGROUP_BPF=y
 CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_AUTOGROUP=y
