Enable Boeflla Wakelock Blocker

--- a/arch/arm64/configs/RMX1921_defconfig
+++ b/arch/arm64/configs/RMX1921_defconfig
@@ -835,6 +835,7 @@ CONFIG_RCU_KTHREAD_PRIO=1
 CONFIG_RCU_BOOST_DELAY=500
 CONFIG_AINUR_DTS_SW=y
 CONFIG_PSI=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 # CONFIG_PSI_DEFAULT_DISABLED is not set
 CONFIG_USB_F_HID=y
 
